[gd_scene load_steps=7 format=1]

[ext_resource path="res://Scripts/Projectiles/Firebolt.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Spells/Fire/fireball.png" type="Texture" id=2]
[ext_resource path="res://Resources/SFX/smp/firebolt.smp" type="Sample" id=3]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 12.0

[sub_resource type="Animation" id=2]

resource/name = "explosion"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:transform/scale")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.9 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector2( 0.05, 0.05 ), Vector2( 0.25, 0.25 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 0.7, 1 ), "transitions":FloatArray( 1, 1, 1 ), "update":0, "values":[ 1.0, 1.0, 0.0 ] }
tracks/2/type = "value"
tracks/2/path = NodePath("Area2D:transform/scale")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0, 0.7 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector2( 1, 1 ), Vector2( 4, 4 ) ] }
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = { "times":FloatArray( 1 ), "transitions":FloatArray( 1 ), "values":[ { "args":[  ], "method":"free_scn" } ] }
tracks/4/type = "value"
tracks/4/path = NodePath("Area2D:monitoring")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = { "times":FloatArray( 0, 0.92 ), "transitions":FloatArray( 1, 1 ), "update":1, "values":[ true, false ] }

[sub_resource type="SampleLibrary" id=3]

samples/firebolt = { "db":0.0, "pitch":1.0, "sample":ExtResource( 3 ) }

[node name="Firebolt" type="KinematicBody2D"]

transform/scale = Vector2( 2, 2 )
input/pickable = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

transform/scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 2 )
__meta__ = { "_edit_lock_":true }

[node name="Area2D" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
__meta__ = { "_edit_group_":true, "_edit_lock_":true }

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/explosion = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="LifeTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[node name="Trail Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.04
one_shot = false
autostart = true

[node name="SFX" type="SamplePlayer2D" parent="."]

params/volume_db = 0.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 1
config/samples = SubResource( 3 )
config/pitch_random = 0.0

[connection signal="area_enter" from="Area2D" to="." method="_on_Area2D_area_enter"]

[connection signal="body_enter" from="Area2D" to="." method="_on_Area2D_body_enter"]

[connection signal="timeout" from="LifeTimer" to="." method="_on_LifeTimer_timeout"]

[connection signal="timeout" from="Trail Timer" to="." method="_on_Trail_Timer_timeout"]


